--- a/config/database.yml
+++ b/config/database.yml
@@ -5,9 +5,11 @@
 #   gem 'sqlite3'
 development:
   adapter: postgresql
+  encoding: unicode
   database: db/development
+  host: localhost
   pool: 5
-  timeout: 5000
+  password:
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -16,10 +18,8 @@ test:
   adapter: postgresql
   database: db/test
   pool: 5
-  timeout: 5000
 
 production:
   adapter: postgresql
   database: db/production
   pool: 5
-  timeout: 5000
