--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: db/development
+  database: mz_development
   host: localhost
   pool: 5
   password:
